Fixed layout problem in the hero

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,7 +8,7 @@
   --text-light: #2f2f2f;
   --shadow-color-dark: rgba(0, 0, 0, 0.15);
   --shadow-color-darker: rgba(0, 0, 0, 0.3);
-  --font-family: "Poppins", sans-serif;
+  --font-family: "Roboto", sans-serif;
 }
 
 /* Root Variables for Dark Mode */
@@ -21,7 +21,7 @@
   --text-light: #d3d3d3; /* Lighter text color for less emphasis */
   --shadow-color-dark: rgba(255, 255, 255, 0.1);
   --shadow-color-darker: rgba(255, 255, 255, 0.15);
-  --font-family: "Poppins", sans-serif;
+  --font-family: "Roboto", sans-serif;
 }
 
 /* Transition for smooth theme change */
@@ -155,9 +155,10 @@ nav ul li.selected {
   justify-content: center;
   flex-direction: column;
   border-radius: 10px;
-  box-shadow: 0 8px 24px var(--shadow-color-dark);
+  /* box-shadow: 0 8px 24px var(--shadow-color-dark); */
   padding: 0px;
   margin: 10px;
+  margin-top: 30px;
   height: 100dvh;
 }
 
@@ -281,7 +282,7 @@ nav ul li.selected {
   justify-content: center;
   flex-direction: column;
   border-radius: 10px;
-  box-shadow: 0 8px 24px var(--shadow-color-dark);
+  /* box-shadow: 0 8px 24px var(--shadow-color-dark); */
   padding: 15px;
   margin: 10px;
 }
@@ -378,7 +379,7 @@ nav ul li.selected {
   justify-content: center;
   flex-direction: column;
   border-radius: 10px;
-  box-shadow: 0 8px 24px var(--shadow-color-dark);
+  /* box-shadow: 0 8px 24px var(--shadow-color-dark); */
   padding: 0px;
   margin: 10px;
 }
@@ -445,7 +446,7 @@ nav ul li.selected {
   transition: background 0.3s ease, transform 0.3s ease;
   text-align: center;
   min-width: 120px; /* Prevent overly small items */
-  box-shadow: 0 0 15px var(--text-color);
+  /* box-shadow: 0 0 15px var(--text-color); */
 }
 
 .skill-item:hover,
@@ -461,7 +462,7 @@ nav ul li.selected {
   justify-content: center;
   flex-direction: column;
   border-radius: 10px;
-  box-shadow: 0 8px 24px var(--shadow-color-dark);
+  /* box-shadow: 0 8px 24px var(--shadow-color-dark); */
   padding: 0px;
   margin: 10px;
 }
@@ -571,7 +572,7 @@ nav ul li.selected {
   justify-content: center;
   flex-direction: column;
   border-radius: 10px;
-  box-shadow: 0 8px 24px var(--shadow-color-dark);
+  /* box-shadow: 0 8px 24px var(--shadow-color-dark); */
   padding: 10px;
   margin: 10px;
 }
